batch participants add overflow corrections updated

--- a/frontend/src/layouts/common/Common.module.css
+++ b/frontend/src/layouts/common/Common.module.css
@@ -886,7 +886,6 @@
     justify-content: center;
     align-items: center;
     padding: 50px;
-    /* overflow: hidden; */
 }
 
 .addstudent-head {
@@ -1071,7 +1070,7 @@
 .modal-modalContent {
     position: relative;
     max-height: 90%;
-    overflow-y: auto;
+    overflow: initial;
     outline: transparent;
 }
 
